--- a/book-detail.html
+++ b/book-detail.html
@@ -307,7 +307,8 @@
                                     </div>
                                     <div class="product-price">
                                         <h4>$ 19.90</h4>
-                                        <p>Author : <span class="color">Alege Ali</span></p>
+                                        <p>Author : <a href="author-detail.html"><span
+                                                class="color">Alege Ali</span></a></p>
                                     </div>
                                     <div class="book-text">
                                         <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
@@ -636,7 +637,7 @@
     </footer>
     <div class="copyrights">
         <div class="container">
-            <p>Copyrights © 2015-16 IrhsaadTech. All rights reserved</p>
+            <p>Copyrights © 2015-16 IrshaadTech. All rights reserved</p>
             <div class="cards"><img src="images/cards.png" alt=""></div>
         </div>
     </div>
