--- a/contact-us.html
+++ b/contact-us.html
@@ -1,13 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<!-- Mirrored from kodeforest.net/html/books/store/contact-us.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 16 Nov 2016 00:03:13 GMT -->
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>Book Store - Book Guide Author, Publication and Store</title>
+    <title>IsLibrary - Contact Us</title>
     <!-- CUSTOM STYLE -->
     <link href="style.css" rel="stylesheet">
     <!-- THEME TYPO -->
@@ -39,13 +38,14 @@
     <![endif]-->
 </head>
 <body>
-<div id="loader-wrapper">
+<!--<div id="loader-wrapper">
     <div id="loader"></div>
 
     <div class="loader-section section-left"></div>
     <div class="loader-section section-right"></div>
 
-</div>
+</div>-->
+
 <!--WRAPPER START-->
 <div class="wrapper">
     <!--HEADER START-->
@@ -180,7 +180,7 @@
     </div>
     <!--CONTENT START-->
     <div class="kode-content padding-tb-50">
-        <!--TOP AUTHERS START-->
+        <!--TOP AUTHoRS START-->
         <div class="container">
             <!--SECTION HEADING START-->
             <div class="section-content">
@@ -248,7 +248,7 @@
                 </div>
             </div>
         </div>
-        <!--TOP AUTHERS END-->
+        <!--TOP AUTHORS END-->
     </div>
     <!--CONTENT END-->
     <!--NEWSLETTER START-->
@@ -336,12 +336,35 @@
     </footer>
     <div class="copyrights">
         <div class="container">
-            <p>Copyrights © 2015-16 KodeForest. All rights reserved</p>
+            <p>Copyrights © 2015-16 Irshaadtech. All Rights Reserved</p>
+            <!--countries flags (depicting different languages)-->
             <div class="cards"><img src="images/cards.png" alt=""></div>
         </div>
     </div>
 </div>
 <!--WRAPPER END-->
+
+<!-- Modal -->
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+                        aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title" id="myModalLabel">Login</h4>
+            </div>
+            <div class="modal-body">
+                Login form
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Save changes</button>
+            </div>
+        </div>
+    </div>
+</div>
+<!--MODAL END-->
+
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="js/jquery.min.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
@@ -357,6 +380,4 @@
 <script src="js/classie.js"></script>
 <script src="js/functions.js"></script>
 </body>
-
-<!-- Mirrored from kodeforest.net/html/books/store/contact-us.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 16 Nov 2016 00:03:17 GMT -->
 </html>
