updated the author and author details pages

--- a/authors.html
+++ b/authors.html
@@ -143,7 +143,7 @@
     <!--BANNER END-->
     <!--CONTENT START-->
     <div class="kode-content padding-tb-50">
-        <!--TOP AUTHERS START-->
+        <!--TOP AUTHORS START-->
         <div class="container">
             <div class="row">
                 <!--AUTHOR LIST START-->
