--- a/book-detail.html
+++ b/book-detail.html
@@ -293,7 +293,7 @@
                         <div class="row">
                             <div class="col-md-5">
                                 <div class="kode-thumb">
-                                    <img src="images/book-detail.jpg" alt="">
+                                    <img src="images/book-detail.jpg" alt="book cover album">
                                 </div>
                             </div>
                             <div class="col-md-7">
@@ -306,7 +306,7 @@
                                         <p>4 Customer reviews</p>
                                     </div>
                                     <div class="product-price">
-                                        <h4>$ 19.90</h4>
+                                        <h4>$ 0.00</h4>
                                         <p>Author : <a href="author-detail.html"><span
                                                 class="color">Alege Ali</span></a></p>
                                     </div>
@@ -643,6 +643,28 @@
     </div>
 </div>
 <!--WRAPPER END-->
+
+<!-- Modal -->
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+    <div class="modal-dialog" role="document">
+        <div class="modal-content">
+            <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
+                        aria-hidden="true">&times;</span></button>
+                <h4 class="modal-title" id="myModalLabel">Login</h4>
+            </div>
+            <div class="modal-body">
+                Login form
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                <button type="button" class="btn btn-primary">Save changes</button>
+            </div>
+        </div>
+    </div>
+</div>
+<!--MODAL END-->
+
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="js/jquery.min.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
