updated the blog list, details and category pages

--- a/authors.html
+++ b/authors.html
@@ -86,9 +86,8 @@
                     <ul>
                         <li><a href="index.html">Home</a></li>
                         <li><a href="book-listing.html">Books & Media</a></li>
-                        <li><a href="blog.html">News & Events</a></li>
+                        <li><a href="blog-list.html">News & Events</a></li>
                         <li class="last"><a href="authors.html">Authors</a></li>
-                        <li><a href="book-listing.html">Products</a></li>
                         <li class="last"><a href="contact-us.html">Contact Us</a></li>
                     </ul>
                 </div>
@@ -97,9 +96,8 @@
                     <ul class="dl-menu">
                         <li><a href="index-2.html">Home</a></li>
                         <li><a href="book-listing.html">Book & Media</a></li>
-                        <li><a href="blog.html">News & Events</a></li>
+                        <li><a href="blog-list.html">News & Events</a></li>
                         <li><a href="authors.html">Authors</a></li>
-                        <li><a href="book-listing.html">Products</a></li>
                         <li class="last"><a href="contact-us.html">Contact Us</a></li>
                     </ul>
                 </div>
