--- a/blog-category.html
+++ b/blog-category.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<!-- Mirrored from kodeforest.net/html/books/store/blog.html by HTTrack Website Copier/3.x [XR&CO'2014], Tue, 15 Nov 2016 23:59:52 GMT -->
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -39,13 +37,13 @@
     <![endif]-->
 </head>
 <body>
-<div id="loader-wrapper">
+<!--<div id="loader-wrapper">
     <div id="loader"></div>
 
     <div class="loader-section section-left"></div>
     <div class="loader-section section-right"></div>
 
-</div>
+</div>-->
 <!--WRAPPER START-->
 <div class="wrapper">
     <!--HEADER START-->
@@ -82,31 +80,10 @@
                 <!--LOGO END-->
                 <div class="kode-navigation">
                     <ul>
-                        <li><a href="index-2.html">Home</a></li>
-                        <li><a href="about-us.html">About Us</a></li>
-                        <li><a href="blog.html">Our Blog</a>
-                            <ul>
-                                <li><a href="blog.html">Blog</a></li>
-                                <li><a href="blog-full.html">Blog Full</a></li>
-                                <li><a href="blog-detail.html">Blog Detail</a></li>
-                            </ul>
-                        </li>
-                        <li class="last"><a href="authors.html">Teams</a>
-                            <ul>
-                                <li><a href="authors.html">Author</a></li>
-                                <li><a href="author-detail.html">Author Detail</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="book-listing.html">Products</a>
-                            <ul>
-                                <li><a href="book-listing.html">Products Style 1</a></li>
-                                <li><a href="book-listing-1.html">Products Style 2</a></li>
-                                <li><a href="book-listing-2.html">Products Style 3</a></li>
-                                <li><a href="book-listing-1-w-sidebar.html">Product 2 W/S</a></li>
-                                <li><a href="book-listing-2-w-sidebar.html">Product 3 W/S</a></li>
-                                <li><a href="book-detail.html">Product Detail</a></li>
-                            </ul>
-                        </li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="book-listing.html">Books & Media</a></li>
+                        <li><a href="blog-list.html">News & Events</a></li>
+                        <li class="last"><a href="authors.html">Authors</a></li>
                         <li class="last"><a href="contact-us.html">Contact Us</a></li>
                     </ul>
                 </div>
@@ -114,30 +91,9 @@
                     <button class="dl-trigger">Open Menu</button>
                     <ul class="dl-menu">
                         <li><a href="index-2.html">Home</a></li>
-                        <li><a href="about-us.html">About Us</a></li>
-                        <li class="menu-item kode-parent-menu"><a href="blog.html">Our Blog</a>
-                            <ul class="dl-submenu">
-                                <li><a href="blog.html">Blog</a></li>
-                                <li><a href="blog-full.html">Blog Full</a></li>
-                                <li><a href="blog-detail.html">Blog Detail</a></li>
-                            </ul>
-                        </li>
-                        <li class="menu-item kode-parent-menu last"><a href="authors.html">Teams</a>
-                            <ul class="dl-submenu">
-                                <li><a href="authors.html">Author</a></li>
-                                <li><a href="author-detail.html">Author Detail</a></li>
-                            </ul>
-                        </li>
-                        <li class="menu-item kode-parent-menu last"><a href="book-listing.html">Products</a>
-                            <ul class="dl-submenu">
-                                <li><a href="book-listing.html">Products Style 1</a></li>
-                                <li><a href="book-listing-1.html">Products Style 2</a></li>
-                                <li><a href="book-listing-2.html">Products Style 3</a></li>
-                                <li><a href="book-listing-1-w-sidebar.html">Product 2 W/S</a></li>
-                                <li><a href="book-listing-2-w-sidebar.html">Product 3 W/S</a></li>
-                                <li><a href="book-detail.html">Product Detail</a></li>
-                            </ul>
-                        </li>
+                        <li><a href="book-listing.html">Book & Media</a></li>
+                        <li><a href="blog-list.html">News & Events</a></li>
+                        <li><a href="authors.html">Authors</a></li>
                         <li class="last"><a href="contact-us.html">Contact Us</a></li>
                     </ul>
                 </div>
@@ -148,7 +104,7 @@
     <!--BANNER START-->
     <div class="kode-inner-banner">
         <div class="kode-page-heading">
-            <h2>Blog</h2>
+            <h2>Blog Categories</h2>
             <ol class="breadcrumb">
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Books Guide</a></li>
