--- a/signup_login.html
+++ b/signup_login.html
@@ -78,7 +78,7 @@
     <!--BANNER START-->
     <div class="kode-inner-banner">
         <div class="kode-page-heading">
-            <h2>Lpgin sign</h2>
+            <h2>Login sign</h2>
         </div>
         <div class="container">
             <div class="banner-search">
@@ -93,7 +93,7 @@
     <!--BANNER END-->
     <div class="copyrights">
         <div class="container">
-            <p>Copyrights © 2015-16 Jatto. All rights reserved</p>
+            <p>Copyrights © 2015-16 IrshaadTech. All rights reserved</p>
             <div class="cards"><img src="images/cards.png" alt=""></div>
         </div>
     </div>
