--- a/author-detail.html
+++ b/author-detail.html
@@ -88,9 +88,8 @@
                     <ul>
                         <li><a href="index.html">Home</a></li>
                         <li><a href="book-listing.html">Books & Media</a></li>
-                        <li><a href="blog.html">News & Events</a></li>
+                        <li><a href="blog-list.html">News & Events</a></li>
                         <li class="last"><a href="authors.html">Authors</a></li>
-                        <li><a href="book-listing.html">Products</a></li>
                         <li class="last"><a href="contact-us.html">Contact Us</a></li>
                     </ul>
                 </div>
@@ -99,9 +98,8 @@
                     <ul class="dl-menu">
                         <li><a href="index-2.html">Home</a></li>
                         <li><a href="book-listing.html">Book & Media</a></li>
-                        <li><a href="blog.html">News & Events</a></li>
+                        <li><a href="blog-list.html">News & Events</a></li>
                         <li><a href="authors.html">Authors</a></li>
-                        <li><a href="book-listing.html">Products</a></li>
                         <li class="last"><a href="contact-us.html">Contact Us</a></li>
                     </ul>
                 </div>
