--- a/blog-list.html
+++ b/blog-list.html
@@ -1,7 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<!-- Mirrored from kodeforest.net/html/books/store/blog-full.html by HTTrack Website Copier/3.x [XR&CO'2014], Wed, 16 Nov 2016 00:03:38 GMT -->
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -39,13 +37,13 @@
     <![endif]-->
 </head>
 <body>
-<div id="loader-wrapper">
+<!--<div id="loader-wrapper">
     <div id="loader"></div>
 
     <div class="loader-section section-left"></div>
     <div class="loader-section section-right"></div>
 
-</div>
+</div>-->
 <!--WRAPPER START-->
 <div class="wrapper">
     <!--HEADER START-->
@@ -82,31 +80,10 @@
                 <!--LOGO END-->
                 <div class="kode-navigation">
                     <ul>
-                        <li><a href="index-2.html">Home</a></li>
-                        <li><a href="about-us.html">About Us</a></li>
-                        <li><a href="blog.html">Our Blog</a>
-                            <ul>
-                                <li><a href="blog.html">Blog</a></li>
-                                <li><a href="blog-full.html">Blog Full</a></li>
-                                <li><a href="blog-detail.html">Blog Detail</a></li>
-                            </ul>
-                        </li>
-                        <li class="last"><a href="authors.html">Teams</a>
-                            <ul>
-                                <li><a href="authors.html">Author</a></li>
-                                <li><a href="author-detail.html">Author Detail</a></li>
-                            </ul>
-                        </li>
-                        <li><a href="book-listing.html">Products</a>
-                            <ul>
-                                <li><a href="book-listing.html">Products Style 1</a></li>
-                                <li><a href="book-listing-1.html">Products Style 2</a></li>
-                                <li><a href="book-listing-2.html">Products Style 3</a></li>
-                                <li><a href="book-listing-1-w-sidebar.html">Product 2 W/S</a></li>
-                                <li><a href="book-listing-2-w-sidebar.html">Product 3 W/S</a></li>
-                                <li><a href="book-detail.html">Product Detail</a></li>
-                            </ul>
-                        </li>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="book-listing.html">Books & Media</a></li>
+                        <li><a href="blog-list.html">News & Events</a></li>
+                        <li class="last"><a href="authors.html">Authors</a></li>
                         <li class="last"><a href="contact-us.html">Contact Us</a></li>
                     </ul>
                 </div>
@@ -114,30 +91,9 @@
                     <button class="dl-trigger">Open Menu</button>
                     <ul class="dl-menu">
                         <li><a href="index-2.html">Home</a></li>
-                        <li><a href="about-us.html">About Us</a></li>
-                        <li class="menu-item kode-parent-menu"><a href="blog.html">Our Blog</a>
-                            <ul class="dl-submenu">
-                                <li><a href="blog.html">Blog</a></li>
-                                <li><a href="blog-full.html">Blog Full</a></li>
-                                <li><a href="blog-detail.html">Blog Detail</a></li>
-                            </ul>
-                        </li>
-                        <li class="menu-item kode-parent-menu last"><a href="authors.html">Teams</a>
-                            <ul class="dl-submenu">
-                                <li><a href="authors.html">Author</a></li>
-                                <li><a href="author-detail.html">Author Detail</a></li>
-                            </ul>
-                        </li>
-                        <li class="menu-item kode-parent-menu last"><a href="book-listing.html">Products</a>
-                            <ul class="dl-submenu">
-                                <li><a href="book-listing.html">Products Style 1</a></li>
-                                <li><a href="book-listing-1.html">Products Style 2</a></li>
-                                <li><a href="book-listing-2.html">Products Style 3</a></li>
-                                <li><a href="book-listing-1-w-sidebar.html">Product 2 W/S</a></li>
-                                <li><a href="book-listing-2-w-sidebar.html">Product 3 W/S</a></li>
-                                <li><a href="book-detail.html">Product Detail</a></li>
-                            </ul>
-                        </li>
+                        <li><a href="book-listing.html">Book & Media</a></li>
+                        <li><a href="blog-list.html">News & Events</a></li>
+                        <li><a href="authors.html">Authors</a></li>
                         <li class="last"><a href="contact-us.html">Contact Us</a></li>
                     </ul>
                 </div>
@@ -220,7 +176,7 @@
                                         doloremque laudantium, totam rem aperiam.ipsam voluptatem quia voluptas sit
                                         aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui
                                         ratione voluptatem sequi nesciunt.</p>
-                                    <a href="#" class="read-more">Read More</a>
+                                    <a href="blog-detail.html" class="read-more">Read More</a>
                                 </div>
                             </div>
                         </div>
@@ -399,9 +355,9 @@
                     <!--SEARCH WIDGET END-->
                     <!--CATEGORY WIDGET START-->
                     <div class="widget widget-categories">
-                        <h2>Categories</h2>
+                        <h2><a href="blog-category.html">Categories</a></h2>
                         <ul>
-                            <li><a href="#">Photoshop</a></li>
+                            <li><a href="blog-category.html">Photoshop</a></li>
                             <li><a href="#">web/Graphic Design</a></li>
                             <li><a href="#">Mobile Development</a></li>
                             <li><a href="#">Video Editing</a></li>
